# advertising-hub

./: .gitignore  ANNOUNCEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/DISCUSSION_TEMPLATE/: welcome.yml
.github/workflows/: monitor-upstream.yml
agents/: README.md
agents/cross-platform/: attribution-analyst.md  audience-architect.md  budget-allocator.md  competitive-intel.md  reporting-unifier.md
agents/orchestrator/: buddy.md
agents/paid-media/: auditor.md  creative-strategist.md  paid-social-strategist.md  ppc-strategist.md  programmatic-buyer.md  search-query-analyst.md  tracking-specialist.md
agents/platform-specific/: amazon-ads-specialist.md  criteo-retargeting-specialist.md  demandbase-abm-strategist.md  linkedin-b2b-strategist.md  microsoft-ppc-specialist.md  pinterest-visual-commerce.md  reddit-ads-specialist.md  spotify-audio-specialist.md  ttd-programmatic-buyer.md
core/: README.md  __init__.py  pyproject.toml
core/auth/: __init__.py  amazon.py  base.py  criteo.py  demandbase.py  google.py  linkedin.py  meta.py  microsoft.py  pinterest.py  reddit.py  spotify.py  thetradedesk.py
core/errors/: __init__.py  error_mapping.py  exceptions.py
core/models/: __init__.py  ad.py  ad_group.py  audience.py  campaign.py  metrics.py  report.py
core/rate_limiting/: __init__.py  throttler.py
core/utils/: __init__.py  currency.py  date_ranges.py  pagination.py  response_normalizer.py
dashboard/: .dev.vars.example  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
dashboard/src/: index.ts
examples/: README.md
integrations/: README.md
integrations/aider/: README.md
integrations/claude-code/: README.md
mcp-servers/: README.md  SPEC.md  registry.yaml
mcp-servers/templates/python-mcp-template/: pyproject.toml  server.py
scripts/: add-backlinks.sh  convert.sh  create-starter-issues.sh  hub-health.sh  install.sh  lint-agents.sh  setup-dev.sh  validate-platforms.sh
wiki/: Agent-Guide.md  Architecture-Overview.md  Cross-Platform-Guides.md  Getting-Started.md  Home.md  MCP-Development-Guide.md  Platform-Index.md  Use-Cases.md  _Sidebar.md
(+142 files in other folders)
