[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "PLATFORM_NAME-mcp"
version = "0.1.0"
description = "MCP server for PLATFORM_NAME advertising API"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "httpx>=0.24.0"]
